--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+/* Main Style */
 body {
   margin: 0;
   font-family: 'Cairo', sans-serif;
@@ -13,21 +15,8 @@ a{
     color: #FFF;
 }
 
-/* === Hero Section === */
-/* .hero {
-  background-image: url('../images/hero.jpg');
-  background-size: cover;
-  background-position: center;
-   background-attachment: fixed;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  text-shadow: 0 0 10px #000;
-  text-align: center;
-} */
+ 
+/* Header Section*/
 
 .hero {
   position: relative;
@@ -168,19 +157,7 @@ a{
   margin: 1rem;
 }
 
-/* === Footer === */
-footer {
-  background-color: #033d1a;
-  color: white;
-  text-align: center;
-  padding: 1rem;
-  margin-top: 2rem;
-}
-  .animated-heading {
-  opacity: 0;
-  transform: translateY(40px);
-  animation: fadeSlideIn 1.5s ease-out forwards;
-}
+
 
 @keyframes fadeSlideIn {
   to {
@@ -189,6 +166,8 @@ footer {
   }
 }
 
+
+/* Gems Section */
 
 .gems .card .img-layout .layout {
   background-color: rgba(255, 255, 255, 0.5); 
@@ -220,7 +199,7 @@ footer {
   opacity: 0;
 }
 
-/* عند التحويم يظهر الكلام بوضوح */
+
 .gems .card:hover .layout .layer-icons p {
   transform: translateY(0);
   opacity: 1;
@@ -322,4 +301,16 @@ section h2::after {
   transform: scale(1.05);
 }
 
-
+/* === Footer === */
+footer {
+  background-color: #033d1a;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 2rem;
+}
+  .animated-heading {
+  opacity: 0;
+  transform: translateY(40px);
+  animation: fadeSlideIn 1.5s ease-out forwards;
+}
